<resources>
    <string name="app_name">Teacher\'s assistant</string>
    <string name="grade_book">Dziennik</string>
    <string name="add_subject">Dodaj przedmiot</string>
    <string name="add_student">Dodaj ucznia</string>
    <string name="settings">Ustawienia</string>
    <string name="configuration">Konfiguracja</string>
    <string name="add_grade">Dodaj ocenę</string>
    <string name="subject_name">Nazwa przedmiotu</string>
    <string name="subject_short">Skrót nazwy</string>
    <string name="day">Dzień</string>
    <string name="hour_block">Blok godzinowy</string>
    <string name="first_name">Imię</string>
    <string name="last_name">Nazwisko</string>
    <string name="id_number">Numer legitymacji</string>
    <string name="assign_subject_to_student">Przypisz przedmioty do ucznia</string>
    <string name="select_grade">Wybierze ocenę</string>
    <string name="note">Notatka</string>
    <string name="grade">Ocena</string>
</resources>