<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_view_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_view_lastname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txt_view_id_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <AutoCompleteTextView
                android:id="@+id/autoComplete_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_grade"
                android:inputType="none" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_input_note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/note" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_add_grade"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_grade"
            android:textSize="18sp"
            app:icon="@drawable/ic_baseline_add_24"
            app:iconGravity="textStart"
            app:iconSize="30dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>